[gd_scene load_steps=57 format=2]

[ext_resource path="res://player/player_controller.gd" type="Script" id=1]
[ext_resource path="res://animations/idle/sprite_00.png" type="Texture" id=2]
[ext_resource path="res://animations/idle/sprite_01.png" type="Texture" id=3]
[ext_resource path="res://animations/idle/sprite_02.png" type="Texture" id=4]
[ext_resource path="res://animations/idle/sprite_03.png" type="Texture" id=5]
[ext_resource path="res://animations/idle/sprite_04.png" type="Texture" id=6]
[ext_resource path="res://animations/idle/sprite_05.png" type="Texture" id=7]
[ext_resource path="res://animations/idle/sprite_06.png" type="Texture" id=8]
[ext_resource path="res://animations/idle/sprite_07.png" type="Texture" id=9]
[ext_resource path="res://animations/idle/sprite_08.png" type="Texture" id=10]
[ext_resource path="res://animations/idle/sprite_09.png" type="Texture" id=11]
[ext_resource path="res://animations/jump/sprite_0.png" type="Texture" id=12]
[ext_resource path="res://animations/fall/sprite_0.png" type="Texture" id=13]
[ext_resource path="res://animations/run/sprite_0.png" type="Texture" id=14]
[ext_resource path="res://animations/run/sprite_1.png" type="Texture" id=15]
[ext_resource path="res://animations/run/sprite_2.png" type="Texture" id=16]
[ext_resource path="res://animations/run/sprite_3.png" type="Texture" id=17]
[ext_resource path="res://animations/dead/sprite_00.png" type="Texture" id=18]
[ext_resource path="res://animations/dead/sprite_01.png" type="Texture" id=19]
[ext_resource path="res://animations/dead/sprite_02.png" type="Texture" id=20]
[ext_resource path="res://animations/dead/sprite_03.png" type="Texture" id=21]
[ext_resource path="res://animations/dead/sprite_04.png" type="Texture" id=22]
[ext_resource path="res://animations/dead/sprite_05.png" type="Texture" id=23]
[ext_resource path="res://animations/dead/sprite_06.png" type="Texture" id=24]
[ext_resource path="res://animations/dead/sprite_07.png" type="Texture" id=25]
[ext_resource path="res://animations/dead/sprite_08.png" type="Texture" id=26]
[ext_resource path="res://animations/dead/sprite_09.png" type="Texture" id=27]
[ext_resource path="res://animations/dead/sprite_10.png" type="Texture" id=28]
[ext_resource path="res://animations/dead/sprite_11.png" type="Texture" id=29]
[ext_resource path="res://animations/dead/sprite_12.png" type="Texture" id=30]
[ext_resource path="res://animations/dead/sprite_13.png" type="Texture" id=31]
[ext_resource path="res://animations/dead/sprite_14.png" type="Texture" id=32]
[ext_resource path="res://animations/dead/sprite_15.png" type="Texture" id=33]
[ext_resource path="res://animations/dead/sprite_16.png" type="Texture" id=34]
[ext_resource path="res://animations/dead/sprite_17.png" type="Texture" id=35]
[ext_resource path="res://animations/dead/sprite_18.png" type="Texture" id=36]
[ext_resource path="res://animations/dead/sprite_19.png" type="Texture" id=37]
[ext_resource path="res://animations/dead/sprite_20.png" type="Texture" id=38]
[ext_resource path="res://animations/dead/sprite_21.png" type="Texture" id=39]
[ext_resource path="res://animations/dead/sprite_22.png" type="Texture" id=40]
[ext_resource path="res://animations/dash/sprite_0.png" type="Texture" id=41]
[ext_resource path="res://player/camera2D.gd" type="Script" id=42]
[ext_resource path="res://player/HUD.tscn" type="PackedScene" id=43]
[ext_resource path="res://game/dead_screen.tscn" type="PackedScene" id=44]
[ext_resource path="res://game/winLevel.tscn" type="PackedScene" id=45]
[ext_resource path="res://pause/pause_menu.tscn" type="PackedScene" id=46]
[ext_resource path="res://effects/light_player.png" type="Texture" id=47]
[ext_resource path="res://fonts/heller_20.tres" type="DynamicFont" id=48]
[ext_resource path="res://backgrounds/background_gray.png" type="Texture" id=49]
[ext_resource path="res://sounds/swoosh.wav" type="AudioStream" id=50]
[ext_resource path="res://sounds/normal_to_slowmo.wav" type="AudioStream" id=51]
[ext_resource path="res://sounds/slowmo_to_normal.wav" type="AudioStream" id=52]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "jump_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "jump_fall",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 7.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.30333, 25.9763 )

[sub_resource type="Shader" id=3]
code = "// define shader type
shader_type canvas_item;

// Variable accessible outside of the shader
uniform float vignette_radius;

/*
https://math.stackexchange.com/questions/198764/how-to-know-if-a-point-is-inside-a-circle
The distance between ⟨xc,yc⟩ and ⟨xp,yp⟩ is given by the Pythagorean theorem as
d=(xp−xc)2+(yp−yc)2−−−−−−−−−−−−−−−−−−√.
The point ⟨xp,yp⟩ is inside the circle if d<r, on the circle if d=r, and outside the circle if d>r. 
You can save yourself a little work by comparing d2 with r2 instead: 
the point is inside the circle if d2<r2, on the circle if d2=r2, and outside the circle if d2>r2. 
Thus, you want to compare the number (xp−xc)2+(yp−yc)2 with r2.
*/

/*
Check if point is inside the circle
    Point to check: vec2 point
    Circle center: vec2 ccircle
    Circle radius: r
Return true if inside circle, false otherwise
*/
bool isInsideCircle(vec2 point, vec2 ccircle, float r){
    return (pow(point.x-ccircle.x, 2) + pow(point.y-ccircle.y, 2)) < pow(r, 2.0); 
}

void fragment(){
	// Put the input pixel in a variable
	vec2 uv = UV;
	
	// 0.5 because vignette is always at the center
	if(isInsideCircle(uv, vec2(0.5, 0.5), vignette_radius)){
	    // Pixel is kept the same
		// SCREEN TEXTURE & UV are used to get
		// what's being the ColorRect
		COLOR = texture(SCREEN_TEXTURE, SCREEN_UV)
	} 
	else{
	    // Pixel is drawn black
	    // edit uv here and then put it back to
	    // the out variable COLOR
	    COLOR.rgb = vec3(0); // 0 black, 1 white
	}

}

	// Sample the texture
	//vec4 tex_color = texture(TEXTURE, UV);
	
	//float len = length(UV - vec2(0.5));

    //COLOR = vec4(tex_color.rgb * vec3(1.0 - len), 0.1);"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/vignette_radius = 0.7

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.86977, 0.404599 )
frames = SubResource( 1 )
animation = "jump_fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.17123, 6.42992 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 200, 50 )
current = true
smoothing_enabled = true
smoothing_speed = 4.0
script = ExtResource( 42 )

[node name="CanvasLayer3" type="CanvasLayer" parent="Camera2D"]
editor/display_folded = true

[node name="Vignette" type="ColorRect" parent="Camera2D/CanvasLayer3"]
visible = false
material = SubResource( 4 )
margin_right = 1280.0
margin_bottom = 720.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
editor/display_folded = true

[node name="HUD" parent="Camera2D/CanvasLayer" instance=ExtResource( 43 )]

[node name="CanvasLayer2" type="CanvasLayer" parent="Camera2D"]
editor/display_folded = true

[node name="Dead_screen" parent="Camera2D/CanvasLayer2" instance=ExtResource( 44 )]
visible = false

[node name="CanvasLayer5" type="CanvasLayer" parent="Camera2D"]
editor/display_folded = true

[node name="win_screen" parent="Camera2D/CanvasLayer5" instance=ExtResource( 45 )]
visible = false

[node name="CanvasLayer4" type="CanvasLayer" parent="Camera2D"]
editor/display_folded = true

[node name="Menu" parent="Camera2D/CanvasLayer4" instance=ExtResource( 46 )]
pause_mode = 2
visible = false

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 47 )
color = Color( 0.870588, 0.576471, 0.235294, 1 )
shadow_enabled = true

[node name="player_state" type="Label" parent="."]
margin_left = -55.0
margin_top = -67.0
margin_right = 58.0
margin_bottom = -47.0
custom_fonts/font = ExtResource( 48 )
text = "IDLE"
align = 1

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SlowmoTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SlowmoSoundTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 960, 540 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 49 )
centered = false

[node name="SwooshSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 50 )
volume_db = 6.0

[node name="NormalToSlow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 51 )

[node name="SlowToNormal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 52 )
[connection signal="visibility_changed" from="Camera2D/CanvasLayer4/Menu" to="Camera2D/CanvasLayer4/Menu" method="_on_Menu_visibility_changed"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SlowmoTimer" to="." method="_on_SlowmoTimer_timeout"]
[connection signal="timeout" from="SlowmoSoundTimer" to="." method="_on_SlowmoSoundTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
